Se realizan mejoras

--- a/app/src/main/res/layout/actividad_llenado.xml
+++ b/app/src/main/res/layout/actividad_llenado.xml
@@ -1,90 +1,114 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ffffff"
     android:weightSum="1"
     android:padding="10dp">
+
     <FrameLayout
-        android:layout_width="311dp"
-        android:layout_height="200dp"
-        android:layout_weight="0.76">
+        android:layout_width="417dp"
+        android:layout_height="match_parent">
 
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="81dp"
+            android:layout_height="94dp"
             android:layout_margin="10dp"
-            android:padding="10dp">
+            android:padding="10dp"
+            android:elevation="10dp">
 
             <TextView
-                android:layout_width="68dp"
-                android:layout_height="40dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Recipiente:"
+                android:id="@+id/textView4"
+                android:textColor="#000000"
+                android:layout_gravity="left|top"
+                android:textSize="15dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="Codigo de Barras:"
                 android:id="@+id/textView"
-                android:layout_gravity="left|bottom"
+                android:layout_gravity="left|center_vertical"
                 android:textColor="#1a0000"
-                android:textSize="10dp" />
+                android:textSize="12dp"
+                android:padding="10dp" />
 
             <EditText
-                android:layout_width="123dp"
-                android:layout_height="33dp"
+                android:layout_width="156dp"
+                android:layout_height="32dp"
                 android:id="@+id/x_codigobarrascapturado"
-                android:layout_gravity="center_horizontal|bottom"
+                android:layout_gravity="center"
                 android:background="#f3f1f1"
-                android:textColor="#403b3b"
-                android:textSize="8dp" />
+                android:textColor="#000000"
+                android:textSize="12dp"
+                android:textAlignment="center" />
 
             <Button
                 android:layout_width="64dp"
-                android:layout_height="37dp"
+                android:layout_height="wrap_content"
                 android:id="@+id/x_codigobarras"
-                android:layout_gravity="right|bottom"
+                android:layout_gravity="right|center_vertical"
                 android:background="@android:drawable/ic_menu_camera" />
 
         </FrameLayout>
 
         <FrameLayout
-            android:layout_width="290dp"
-            android:layout_height="112dp"
+            android:layout_width="match_parent"
+            android:layout_height="140dp"
             android:layout_margin="10dp"
             android:padding="10dp"
             android:layout_weight="0.36"
-            android:layout_gravity="left|center_vertical">
+            android:layout_gravity="left|center_vertical"
+            android:elevation="10dp">
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="139dp"
+                android:layout_height="38dp"
+                android:text="Estacion:"
+                android:id="@+id/textView3"
+                android:layout_gravity="left|bottom"
+                android:textColor="#000000"
+                android:textSize="12dp"
+                android:padding="10dp" />
+
+            <TextView
+                android:layout_width="130dp"
+                android:layout_height="34dp"
                 android:text="Lote:"
                 android:id="@+id/textView2"
-                android:layout_gravity="left|top"
+                android:layout_gravity="left|center_vertical"
                 android:textColor="#000000"
-                android:textSize="10dp" />
+                android:textSize="12dp"
+                android:padding="10dp" />
 
             <EditText
-                android:layout_width="123dp"
+                android:layout_width="230dp"
                 android:layout_height="36dp"
                 android:inputType="number"
                 android:ems="10"
-                android:id="@+id/editText2"
-                android:layout_gravity="center_horizontal|top"
+                android:id="@+id/x_lote"
+                android:layout_gravity="right|center_vertical"
                 android:background="#f3f1f1"
                 android:textColor="#000000" />
 
             <Spinner
-                android:layout_width="123dp"
+                android:layout_width="230dp"
                 android:layout_height="36dp"
                 android:id="@+id/spinner"
-                android:layout_gravity="center_horizontal|bottom"
+                android:layout_gravity="right|bottom"
                 android:background="#f3f1f1" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Estacion:"
-                android:id="@+id/textView3"
-                android:layout_gravity="left|bottom"
+                android:text="Llenado:"
+                android:id="@+id/textView5"
+                android:layout_gravity="left|top"
                 android:textColor="#000000"
-                android:textSize="10dp" />
+                android:textSize="15dp" />
 
 
         </FrameLayout>
@@ -99,4 +123,4 @@
 
     </FrameLayout>
 
-</LinearLayout>
+</GridLayout>
