--- a/app/src/main/res/layout-v14/actividad_llenado.xml
+++ b/app/src/main/res/layout-v14/actividad_llenado.xml
@@ -9,19 +9,20 @@
 
     <FrameLayout
         android:layout_width="467dp"
-        android:layout_height="fill_parent"
-        android:layout_row="0"
-        android:layout_column="0"
+        android:layout_height="350dp"
+        android:id="@+id/frameLayout"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/frameLayout">
+        android:layout_alignParentStart="true">
 
         <FrameLayout
-            android:layout_width="420dp"
-            android:layout_height="94dp"
-            android:layout_margin="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="144dp"
+            android:layout_margin="5dp"
             android:padding="10dp"
-            android:elevation="10dp">
+            android:elevation="10dp"
+            android:background="#f4f4f4"
+            android:layout_gravity="left|top">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -30,82 +31,46 @@
                 android:id="@+id/textView4"
                 android:textColor="#000000"
                 android:layout_gravity="left|top"
-                android:textSize="15dp" />
+                android:textSize="25dp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Codigo de Barras:"
                 android:id="@+id/textView"
-                android:layout_gravity="left|center_vertical"
+                android:layout_gravity="left|bottom"
                 android:textColor="#1a0000"
-                android:textSize="12dp"
+                android:textSize="15dp"
                 android:padding="10dp" />
+
+            <Button
+                android:layout_width="103dp"
+                android:layout_height="72dp"
+                android:id="@+id/x_codigobarras"
+                android:layout_gravity="right|bottom"
+                android:background="@android:drawable/ic_menu_camera" />
 
             <EditText
                 android:layout_width="156dp"
                 android:layout_height="32dp"
                 android:id="@+id/x_codigobarrascapturado"
-                android:layout_gravity="center"
-                android:background="#f3f1f1"
+                android:layout_gravity="center_horizontal|bottom"
+                android:background="#ffffff"
                 android:textColor="#000000"
-                android:textSize="12dp"
+                android:textSize="15dp"
                 android:textAlignment="center" />
-
-            <Button
-                android:layout_width="64dp"
-                android:layout_height="wrap_content"
-                android:id="@+id/x_codigobarras"
-                android:layout_gravity="right|center_vertical"
-                android:background="@android:drawable/ic_menu_camera" />
 
         </FrameLayout>
 
         <FrameLayout
-            android:layout_width="420dp"
-            android:layout_height="140dp"
-            android:layout_margin="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="160dp"
+            android:layout_margin="5dp"
             android:padding="10dp"
             android:layout_weight="0.36"
-            android:layout_gravity="left|center_vertical"
-            android:elevation="10dp">
-
-            <TextView
-                android:layout_width="139dp"
-                android:layout_height="38dp"
-                android:text="Estacion:"
-                android:id="@+id/textView3"
-                android:layout_gravity="left|bottom"
-                android:textColor="#000000"
-                android:textSize="12dp"
-                android:padding="10dp" />
-
-            <TextView
-                android:layout_width="130dp"
-                android:layout_height="34dp"
-                android:text="Lote:"
-                android:id="@+id/textView2"
-                android:layout_gravity="left|center_vertical"
-                android:textColor="#000000"
-                android:textSize="12dp"
-                android:padding="10dp" />
-
-            <EditText
-                android:layout_width="230dp"
-                android:layout_height="36dp"
-                android:inputType="number"
-                android:ems="10"
-                android:id="@+id/x_lote"
-                android:layout_gravity="right|center_vertical"
-                android:background="#f3f1f1"
-                android:textColor="#000000" />
-
-            <Spinner
-                android:layout_width="230dp"
-                android:layout_height="36dp"
-                android:id="@+id/spinner"
-                android:layout_gravity="right|bottom"
-                android:background="#f3f1f1" />
+            android:layout_gravity="left|bottom"
+            android:elevation="10dp"
+            android:background="#f4f4f4">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -114,28 +79,70 @@
                 android:id="@+id/textView5"
                 android:layout_gravity="left|top"
                 android:textColor="#000000"
-                android:textSize="15dp" />
+                android:textSize="25dp"
+                android:textIsSelectable="false" />
+
+            <TextView
+                android:layout_width="93dp"
+                android:layout_height="wrap_content"
+                android:text="Lote:"
+                android:id="@+id/textView2"
+                android:layout_gravity="center_horizontal|top"
+                android:textColor="#000000"
+                android:textSize="15dp"
+                android:padding="10dp" />
+
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="36dp"
+                android:inputType="number"
+                android:ems="10"
+                android:id="@+id/x_lote"
+                android:layout_gravity="right|top"
+                android:textColor="#000000"
+                android:textSize="15dp"
+                android:textAlignment="center"
+                android:background="#ffffff" />
+
+            <Spinner
+                android:layout_width="165dp"
+                android:layout_height="45dp"
+                android:id="@+id/spinner"
+                android:layout_gravity="right|bottom"
+                android:background="#000000" />
+
+            <TextView
+                android:layout_width="112dp"
+                android:layout_height="67dp"
+                android:text="Estacion:"
+                android:id="@+id/textView3"
+                android:layout_gravity="center_horizontal|bottom"
+                android:textColor="#000000"
+                android:textSize="15dp"
+                android:padding="10dp" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Registrar Llenado"
+                android:id="@+id/x_registrarllenado"
+                android:padding="10dp"
+                android:layout_gravity="left|bottom"
+                android:elevation="10dp" />
 
 
         </FrameLayout>
 
-        <Button
-            android:layout_width="226dp"
-            android:layout_height="80dp"
-            android:text="Registrar LLenado"
-            android:id="@+id/button"
-            android:padding="10dp"
-            android:layout_gravity="center_horizontal|bottom"
-            android:elevation="10dp" />
-
     </FrameLayout>
 
     <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_toEndOf="@+id/frameLayout"
-        android:layout_toRightOf="@+id/frameLayout"
-        android:padding="10dp">
+        android:layout_width="450dp"
+        android:layout_height="350dp"
+        android:padding="5dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:id="@+id/frameLayout2">
 
         <TableLayout
             android:layout_width="wrap_content"
@@ -144,7 +151,9 @@
             android:layout_row="0"
             android:id="@+id/tableLayout"
             android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/frameLayout">
+            android:layout_toRightOf="@+id/frameLayout"
+            android:layout_gravity="center_horizontal|top"
+            android:background="#f4f4f4">
 
             <TableRow
                 android:layout_width="match_parent"
@@ -153,8 +162,8 @@
                 <FrameLayout
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
-                    android:elevation="10dp"
-                    android:contextClickable="false">
+                    android:contextClickable="false"
+                    android:focusable="false">
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -163,23 +172,26 @@
                         android:id="@+id/textView6"
                         android:layout_gravity="left|center_vertical"
                         android:textColor="#1a0000"
-                        android:textSize="12dp"
+                        android:textSize="15dp"
                         android:padding="10dp" />
 
                     <EditText
                         android:layout_width="123dp"
                         android:layout_height="32dp"
-                        android:id="@+id/editText"
+                        android:id="@+id/x_numserie"
                         android:layout_gravity="center"
-                        android:background="#f3f1f1"
-                        android:textColor="#000000"
-                        android:textSize="12dp"
-                        android:textAlignment="center" />
+                        android:background="#ffffff"
+                        android:textColor="#0238c2"
+                        android:textSize="20dp"
+                        android:textAlignment="textEnd"
+                        android:inputType="text"
+                        android:editable="false"
+                        android:focusable="true" />
 
                     <CheckBox
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/checkBox"
+                        android:id="@+id/x_checknumeroserie"
                         android:layout_gravity="right|center_vertical"
                         android:checked="false" />
                 </FrameLayout>
@@ -192,18 +204,19 @@
                 <FrameLayout
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
-                    android:elevation="10dp"
                     android:contextClickable="false" >
 
                     <EditText
                         android:layout_width="123dp"
                         android:layout_height="32dp"
-                        android:id="@+id/editText2"
+                        android:id="@+id/x_tarareal"
                         android:layout_gravity="center"
-                        android:background="#f3f1f1"
-                        android:textColor="#000000"
-                        android:textSize="12dp"
-                        android:textAlignment="center" />
+                        android:background="#ffffff"
+                        android:textColor="#0238c2"
+                        android:textSize="20dp"
+                        android:textAlignment="textEnd"
+                        android:inputType="text"
+                        android:focusable="true" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -212,13 +225,13 @@
                         android:id="@+id/textView7"
                         android:layout_gravity="left|center_vertical"
                         android:textColor="#1a0000"
-                        android:textSize="12dp"
+                        android:textSize="15dp"
                         android:padding="10dp" />
 
                     <CheckBox
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/checkBox2"
+                        android:id="@+id/x_chtarareal"
                         android:layout_gravity="right|center_vertical"
                         android:checked="false" />
                 </FrameLayout>
@@ -230,19 +243,19 @@
 
                 <FrameLayout
                     android:layout_width="400dp"
-                    android:layout_height="50dp"
-                    android:elevation="10dp"
+                    android:layout_height="60dp"
                     android:contextClickable="false" >
 
                     <EditText
                         android:layout_width="123dp"
                         android:layout_height="32dp"
-                        android:id="@+id/editText3"
+                        android:id="@+id/x_pruebahidro"
                         android:layout_gravity="center"
-                        android:background="#f3f1f1"
-                        android:textColor="#000000"
-                        android:textSize="12dp"
-                        android:textAlignment="center" />
+                        android:background="#ffffff"
+                        android:textColor="#0238c2"
+                        android:textSize="20dp"
+                        android:textAlignment="textEnd"
+                        android:focusable="true" />
 
                     <TextView
                         android:layout_width="102dp"
@@ -251,13 +264,13 @@
                         android:id="@+id/textView8"
                         android:layout_gravity="left|center_vertical"
                         android:textColor="#1a0000"
-                        android:textSize="12dp"
+                        android:textSize="15dp"
                         android:padding="10dp" />
 
                     <CheckBox
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/checkBox3"
+                        android:id="@+id/x_chhidro"
                         android:layout_gravity="right|center_vertical"
                         android:checked="false" />
                 </FrameLayout>
@@ -266,10 +279,10 @@
         </TableLayout>
 
         <TableLayout
-            android:layout_width="400dp"
+            android:layout_width="match_parent"
             android:layout_height="119dp"
-            android:layout_gravity="left|center_vertical"
-            android:elevation="10dp">
+            android:layout_gravity="center_horizontal|bottom"
+            android:background="#f4f4f4">
 
             <TableRow
                 android:layout_width="match_parent"
@@ -292,14 +305,15 @@
                         android:padding="10dp" />
 
                     <EditText
-                        android:layout_width="200dp"
+                        android:layout_width="173dp"
                         android:layout_height="32dp"
-                        android:id="@+id/editText4"
+                        android:id="@+id/x_taraimpresa"
                         android:layout_gravity="right|center_vertical"
-                        android:background="#f3f1f1"
-                        android:textColor="#000000"
-                        android:textSize="12dp"
-                        android:textAlignment="center" />
+                        android:background="#ffffff"
+                        android:textColor="#0238c2"
+                        android:textSize="20dp"
+                        android:textAlignment="textEnd"
+                        android:focusable="true" />
 
                 </FrameLayout>
             </TableRow>
@@ -325,25 +339,42 @@
                         android:padding="10dp" />
 
                     <EditText
-                        android:layout_width="200dp"
+                        android:layout_width="175dp"
                         android:layout_height="32dp"
-                        android:id="@+id/editText5"
+                        android:id="@+id/x_cloro"
                         android:layout_gravity="right|center_vertical"
-                        android:background="#f3f1f1"
-                        android:textColor="#000000"
-                        android:textSize="12dp"
-                        android:textAlignment="center" />
+                        android:background="#ffffff"
+                        android:textColor="#0238c2"
+                        android:textSize="20dp"
+                        android:textAlignment="textEnd"
+                        android:focusable="true" />
 
                 </FrameLayout>
             </TableRow>
         </TableLayout>
 
-        <ImageView
-            android:layout_width="131dp"
-            android:layout_height="131dp"
-            android:id="@+id/imageView3"
-            android:layout_gravity="center_horizontal|bottom" />
-
     </FrameLayout>
+
+    <ImageView
+        android:layout_width="200dp"
+        android:layout_height="match_parent"
+        android:id="@+id/imageView3"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_above="@+id/frameLayout"
+        android:background="@drawable/quimpac" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView4"
+        android:layout_above="@+id/frameLayout"
+        android:layout_alignParentTop="true"
+        android:background="@drawable/banner"
+        android:layout_alignRight="@+id/frameLayout2"
+        android:layout_alignEnd="@+id/frameLayout2"
+        android:layout_toRightOf="@+id/imageView3"
+        android:layout_toEndOf="@+id/imageView3" />
 
 </RelativeLayout>
