--- a/app/src/main/res/layout/activity_principal.xml
+++ b/app/src/main/res/layout/activity_principal.xml
@@ -1,68 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#fefefe">
+    android:background="#fefefe"
+    android:stretchColumns="10">
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="LLenado Recipiente"
         android:id="@+id/x_llenado"
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_toLeftOf="@+id/x_acttara"
-        android:layout_toStartOf="@+id/x_acttara" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Actualizar Tara"
-        android:id="@+id/x_acttara"
-        android:layout_alignTop="@+id/x_llenado"
-        android:layout_toLeftOf="@+id/x_actcodigo"
-        android:layout_toStartOf="@+id/x_actcodigo" />
+        android:layout_gravity="right"
+        android:layout_column="0"
+        android:layout_below="@+id/imageView2"
+        android:layout_toLeftOf="@+id/imageView2"
+        android:layout_toStartOf="@+id/imageView2"
+        android:layout_marginTop="82dp" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Actualizar Codigo de Barras"
         android:id="@+id/x_actcodigo"
+        android:layout_gravity="center_horizontal"
+        android:layout_column="1"
         android:layout_alignTop="@+id/x_acttara"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignRight="@+id/imageView2"
+        android:layout_alignEnd="@+id/imageView2"
+        android:layout_marginRight="57dp"
+        android:layout_marginEnd="57dp" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Cerrar aplicacion"
-        android:id="@+id/x_cerrar"
-        android:layout_alignParentBottom="true"
-        android:layout_toRightOf="@+id/x_llenado"
-        android:layout_toEndOf="@+id/x_llenado" />
+        android:text="Actualizar Tara"
+        android:id="@+id/x_acttara"
+        android:layout_column="2"
+        android:layout_alignTop="@+id/x_llenado"
+        android:layout_centerHorizontal="true" />
+
+    <ImageView
+        android:layout_width="700dp"
+        android:layout_height="200dp"
+        android:id="@+id/imageView2"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:background="@drawable/banner"
+        android:layout_column="2"
+        android:layout_span="18" />
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageView"
+        android:layout_alignBottom="@+id/imageView2"
+        android:layout_toLeftOf="@+id/imageView2"
         android:layout_alignParentTop="true"
-        android:layout_above="@+id/x_llenado"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:background="@drawable/quimpac"
-        android:layout_toStartOf="@+id/x_acttara"
-        android:layout_toLeftOf="@+id/x_acttara" />
+        android:background="@drawable/quimpac" />
 
-    <ImageView
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageView2"
-        android:layout_alignBottom="@+id/imageView"
-        android:layout_toRightOf="@+id/imageView"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:background="@drawable/banner" />
+        android:text="Cerrar"
+        android:id="@+id/button2"
+        android:layout_alignParentBottom="true"
+        android:layout_alignLeft="@+id/x_acttara"
+        android:layout_alignStart="@+id/x_acttara"
+        android:layout_alignRight="@+id/x_acttara"
+        android:layout_alignEnd="@+id/x_acttara" />
 
 </RelativeLayout>
