--- a/app/src/main/res/layout/barcode_capture.xml
+++ b/app/src/main/res/layout/barcode_capture.xml
@@ -8,16 +8,16 @@
     android:layout_height="match_parent"
     android:keepScreenOn="true">
 
-  <com.web.webmapsoft.barcodescanner.ui.camera.CameraSourcePreview
-      android:id="@+id/preview"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent">
-
-    <com.web.webmapsoft.barcodescanner.ui.camera.ui.camera.GraphicOverlay
-        android:id="@+id/graphicOverlay"
+    <com.web.webmapsoft.barcodescanner.ui.camera.CameraSourcePreview
+        android:id="@+id/preview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
 
-  </com.web.webmapsoft.barcodescanner.ui.camera.CameraSourcePreview>
+        <com.web.webmapsoft.barcodescanner.ui.camera.GraphicOverlay
+            android:id="@+id/graphicOverlay"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </com.web.webmapsoft.barcodescanner.ui.camera.CameraSourcePreview>
 
 </LinearLayout>
